Changelog
=========

1.1 - Unreleased
----------------

- Open /dev/tty in binary mode under Python 3.
  [stefan]

- Disable buffering if the device is not seekable.
  [stefan]


1.0 - 2012-04-11
----------------

- Initial release.
  [stefan]